feat: get workflow log
