# cmd/apiserver/docs/swagger.json
@@ -592,50 +592,7 @@
                 }
             }
         },
-        "/admin/workflows/status": {
-            "post": {
-                "description": "启动或停止 workflow 运行状态",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "workflow"
-                ],
-                "summary": "启动或停止 workflow",
-                "parameters": [
-                    {
-                        "description": "workflow 状态参数",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.UpdateWorkflowStatusReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/workflows/{id}/logs/{name}": {
+        "/admin/workflows/rounds/{id}/logs/{name}": {
             "get": {
                 "description": "获取指定轮次和名称的 workflow 日志文件",
                 "produces": [
@@ -667,6 +624,49 @@
                         "schema": {
                             "type": "file"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/workflows/status": {
+            "post": {
+                "description": "启动或停止 workflow 运行状态",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workflow"
+                ],
+                "summary": "启动或停止 workflow",
+                "parameters": [
+                    {
+                        "description": "workflow 状态参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UpdateWorkflowStatusReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
